ast/src/snapshots/transmute_ast__parser__tests__err_annotations_on_annotation.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"@a1 annotation a2;\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Annotations not supported on annotations",
                span: 1:1; [0, 3],
                level: Error,
            },
        ],
    },
)
