ast/src/snapshots/transmute_ast__parser__tests__err_annotations_on_if.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Annotations not supported on expressions",
                span: 1:11; [10, 13],
                level: Error,
            },
        ],
        inputs: (),
    },
)
