ast/src/snapshots/transmute_ast__parser__tests__err_annotations_on_let.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Annotations not supported on non `let`-function statements",
                span: 1:11; [10, 17],
                level: Error,
            },
        ],
        inputs: (),
    },
)
