ast/src/snapshots/transmute_ast__parser__tests__err_annotations_on_ret.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"let f() { @a1 @a2 ret 1; }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Annotations not supported on `ret` statements",
                span: 1:11; [10, 17],
                level: Error,
            },
        ],
    },
)
