ast/src/snapshots/transmute_ast__parser__tests__err_annotations_without_identifier.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"@ let f() { }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `let`, expected one of (1) identifier",
                span: 1:3; [2, 5],
                level: Error,
            },
        ],
    },
)
