ast/src/snapshots/transmute_ast__parser__tests__err_array_instantiation_missing_element.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"[0, ,];\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `,`, expected one of (10) identifier, number, `true`, `false`, `if`, `while`, `(`, `-`, `]`, `[`",
                span: 1:5; [4, 5],
                level: Error,
            },
        ],
    },
)
