ast/src/snapshots/transmute_ast__parser__tests__err_array_type_missing_base.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"struct S { field: [; 4] }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `;`, expected one of (2) identifier, `[`",
                span: 1:20; [19, 20],
                level: Error,
            },
        ],
    },
)
