ast/src/snapshots/transmute_ast__parser__tests__err_array_type_missing_semi.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"struct S { field: [number 4] }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected number(4), expected one of (1) `;`",
                span: 1:27; [26, 27],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    719,
                ),
            },
        ],
    },
)
