ast/src/snapshots/transmute_ast__parser__tests__err_expression_inserted_token_before_expression.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"^42;\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `^`, expected one of (11) identifier, number, `true`, `false`, `let`, `ret`, `if`, `while`, `(`, `-`, `[`",
                span: 1:1; [0, 1],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    395,
                ),
            },
        ],
    },
)
